--- a/styles.css
+++ b/styles.css
@@ -368,17 +368,18 @@ section{
     display: flex;
   }
 
-.glowing-triangle {
+  .glowing-triangle {
     width: 600px;
     height: 600px;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    background-color: #00ffff;
+    background: linear-gradient(135deg, #FFFF00, #00ffff);
     position: absolute;
     top: 0;
     left: 150px;
     transform: rotate(57deg);
     z-index: 1;
-  }
+}
+
 
   
   /* Add this CSS for the triangle outline */
@@ -387,7 +388,7 @@ section{
     position: absolute;
     width: 100%;
     height: 100%;
-    border: 2px solid #00ffff; /* Adjust the border properties as needed */
+    border: 2px solid #F7F700; /* Adjust the border properties as needed */
     box-sizing: border-box;
     top: 0;
     left: 0;
@@ -395,7 +396,7 @@ section{
   }
   
 .shadow {
-    filter: drop-shadow(5px 5px 50px #00ffff) drop-shadow(-10px -10px 50px #00ffff);
+    filter: drop-shadow(5px 5px 20px #F7F700) drop-shadow(-5px -5px 20px #00ffff);
     position: relative;
     z-index: 1;
   }
@@ -434,14 +435,6 @@ section{
 
   }
 
-  
-  
-  
-  
-  
-  
-  
-  
 
 
 /* Services Page */
