--- a/styles.css
+++ b/styles.css
@@ -372,7 +372,7 @@ section{
     width: 600px;
     height: 600px;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    background: linear-gradient(135deg, #FFFF00, #00ffff);
+    background: linear-gradient(135deg, #3A7B7B, #3A7B7B);
     position: absolute;
     top: 0;
     left: 150px;
@@ -388,7 +388,7 @@ section{
     position: absolute;
     width: 100%;
     height: 100%;
-    border: 2px solid #F7F700; /* Adjust the border properties as needed */
+    border: 2px solid #2C4446; /* Adjust the border properties as needed */
     box-sizing: border-box;
     top: 0;
     left: 0;
@@ -396,7 +396,7 @@ section{
   }
   
 .shadow {
-    filter: drop-shadow(5px 5px 20px #F7F700) drop-shadow(-5px -5px 20px #00ffff);
+    filter: drop-shadow(5px 5px 20px #2C4446) drop-shadow(-5px -5px 20px #2C4446);
     position: relative;
     z-index: 1;
   }
@@ -435,7 +435,7 @@ section{
 
   }
 
-
+ 
 
 /* Services Page */
 /* Card 1 */
