--- a/styles.css
+++ b/styles.css
@@ -353,13 +353,6 @@ section{
     background-color: white;
 }
 
-
-.services{
-    background-color: #1d2229;
-    z-index: 3;
-
-}
-
   
 .about {
     z-index: 2;
@@ -405,7 +398,7 @@ section{
     position: relative;
     width: 600px;
     height: auto;
-    top: 57px;
+    top: 60px;
     left: 350px;
     transform: translateX(-50%);
     z-index: 2;
@@ -417,6 +410,8 @@ section{
 .about-image img{
     max-width: 100%;
     height: auto;
+    position: relative;
+    bottom: 60px;
   }
 
 .about-content{
@@ -438,156 +433,51 @@ section{
  
 
 /* Services Page */
-/* Card 1 */
-.container1{
-    width: 100%;
-    height: 100%;
-    display: grid;
-    justify-content: start;
+.services{
+    z-index: 3;
+    background-color: grey;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
 
 }
 
-.container1 .card, .container1 .card2{
-    position: relative;
-    width: 450px;
-    height: 200px;
-    padding: 15px;
-    left: 30px;
-    background: linear-gradient(60deg, #151516 0%, #1d2229 100%);
-    overflow: hidden;
-    margin-bottom: 50px;
-    border-radius: 20px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 3);
-}
 
-.container1 .card2{
-    bottom: 40px;
-}
+.services-content{
+    background-color: white;
+    height: 500px;
+    width: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 20px;
 
-.container1 .card h2{
-    font-family: 'Poppins', sans-serif;
-    z-index: 100;
-    position: absolute;
-    bottom: 25px;
-    right: 130px;
-    font-size: 50px;
-    font-weight: 50px;
-    color: #fff;
-    pointer-events: none;
-    transition: 0.2s ease;
-    text-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-}
-
-.container1 .card p{
-    z-index: 99;
-    position: absolute;
-    top: 60px;
-    right: 35px;
-    width: 150px;
-    color: #fff;
-    opacity: 0;
-    font-size: 12px;
-    text-align: right;
-    letter-spacing: 1px;
-    transition: 0.2s ease;
 
 }
 
-.container1 .card span{
-    z-index: 99;
-    position: absolute;
-    top: 45px;
-    right: 10px;
-    color: #fff;
-    font-size: 12px;
-    letter-spacing: 1px;
-    writing-mode: vertical-lr;
-    transition: 0.2s ease;
-    opacity: 0.7;
-}
-.container1 .card .pic{
-    z-index: 98;
-    width: 395px;
-    height: 200px;
-    background-image: url(jjk.jpg);
-    background-size: cover;
-    border-radius: 12px;
-    filter: grayscale(100%);
-    transition: 0.3s ease;
+.services-box1{
+    background: #00578a;
 
 }
 
-.container1 .card button{
-    position: absolute;
-    right: 9px;
-    bottom: 40px;
-    width: 15px;
-    height: 15px;
-    background-color: #772a9b;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    outline: none;
-    opacity: 1;
-    transition: 0.3s ease;
+.services-box2{
+    background: black;
 }
 
-.container1 .card:hover button{
-    z-index: 99;
-    transform: scale(30.5);
-    opacity: 0.5;
+.services-box3{
+    background: yellow;
 }
 
-.container1 .card:hover h2{
-    z-index: 100;
-    bottom: 90px;
-    right: 40px;
+.services-box1,
+.services-box2,
+.services-box3{
+    height: 400px;
+    width: 300px;
+    z-index: 2;
 }
 
-.container1 .card:hover p{
-    z-index: 100;
-    opacity: 100;
-    top: 130px;
-    right: 60px;
-}
-
-.container1 .card:hover span{
-    opacity: 0;
-    top: 80px;
-}
-
-.container1 .card:hover .pic{
-    filter: grayscale(0);
-    width: 420px;
-}
-
-/* Card 2 */
-.container1 .card2 .pic2{
-    z-index: 98;
-    width: 395px;
-    height: 200px;
-    background-image: url(hxh.jpg);
-    background-size: cover;
-    border-radius: 12px;
-    filter: grayscale(100%);
-    transition: 0.3s ease;
-
-}
-
-.continter1 .card2 .pic2{
-    background-image: url(hxh.jpg);
-    transition: 0.3 ease;
-}
-
-.container1 .card2:hover .pic2{
-    filter: grayscale(0);
-    width: 420px;
-}
-
-.container1 .card2 button{
-    background-color: #58f4ff;
-}
 
 
 /* Skills */
